2011-11-23  Adam Barth  <abarth@webkit.org>

        garden-o-matic should support AUDIO failures
        https://bugs.webkit.org/show_bug.cgi?id=69477

        Reviewed by Dimitri Glazkov.

        This is a first iteration at supporting AUDIO failures in
        garden-o-matic.  We'll probably need to iterate a bit when we have a
        real audio failure in the tree to play with.  For example, we'll
        probably want to add and <audio> element to the "Examine" view to hear
        the differences, but that all can be done in a subsequent patch.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/results.js:

2011-11-23  Scott Graham  <scottmg@chromium.org>

        Adding gamepad support
        https://bugs.webkit.org/show_bug.cgi?id=69451

        Reviewed by Darin Fisher.

        Add a 'gamepadController' to Chromium DRT. Allows for setting of mock
        gamepad data that will be retrieved when JS code pulls via API access.

        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/chromium/GamepadController.cpp: Added.
        (GamepadController::GamepadController):
        (GamepadController::bindToJavascript):
        (GamepadController::reset):
        (GamepadController::connect):
        (GamepadController::disconnect):
        (GamepadController::setId):
        (GamepadController::setButtonCount):
        (GamepadController::setButtonData):
        (GamepadController::setAxisCount):
        (GamepadController::setAxisData):
        (GamepadController::fallbackCallback):
        * DumpRenderTree/chromium/GamepadController.h: Added.
        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::TestShell):
        (TestShell::resetTestController):
        (TestShell::bindJSObjectsToWindow):
        * DumpRenderTree/chromium/TestShell.h:
        (TestShell::gamepadController):

2011-11-23  Raphael Kubo da Costa  <kubo@profusion.mobi>
